src/css/pages/case-study-sb-career.scss
@import '../utils/vars';
@import '../utils/colors';
@import '../utils/type';
@import '../utils/functions';
@import '../utils/mixins';

.cs-container {
  max-width: rem(1920);

  &__column {
    @media screen and (min-width: rem(1024)) {
      padding-right: rem(46);
      padding-left: rem(46);
    }

    @media screen and (min-width: rem(1366)) {
      padding-right: rem(94);
      padding-left: rem(94);
    }

    @media screen and (min-width: rem(1440)) {
      padding-right: rem(112);
      padding-left: rem(112);
    }

    @media screen and (min-width: rem(1920)) {
      padding-right: rem(230);
      padding-left: rem(230);
    }
  }
}

.hero {
  position: relative;

  img {
    width: 100%;
  }
}

.intro {
  position: relative;
  background-color: #0a623e;
  color: $tuf-color-white;

  &__img {
    width: 100%;
  }
}

.snakes-ladders {
  position: relative;
  background-color: $tuf-color-white;
  color: $tuf-color-gray;

  &__content {
    img {
      width: 100%;
    }
  }

  &__bg {
    position: relative;
    width: 100%;
    padding-bottom: percentage(1440 / 960);
    left: 0;
    background-image: url('/assets/img/case-studies/starbucks-career/snakes-ladders-support.jpg');
    background-size: cover;

    @media screen and (min-width: rem(768)) {
      position: absolute;
      width: 50%;
      height: 100%;
      padding-bottom: 0;
    }
  }

  &__beans {
    position: relative;
    left: 0%;
    width: 100%;

    @media screen and (min-width: rem(768)) {
      left: 50%;
      width: 50%;
    }
  }
}

.board-games {
  &__image {
    width: 100%;
  }
}

.we-knew {
  position: relative;
  background-color: #0a623e;
  color: $tuf-color-white;

  &__suit {
    position: relative;
    left: 0%;
    width: 100%;

    @media screen and (min-width: rem(768)) {
      width: 50%;
    }
  }

  &__bg {
    position: relative;
    height: rem(500);
    width: 100%;
    left: 0;
    background-image: url('/assets/img/case-studies/starbucks-career/characters.jpg');
    background-size: contain;
    background-repeat: no-repeat;
    background-color: #d7d7d7;

    @media screen and (min-width: rem(768)) {
      position: absolute;
      left: 50%;
      width: 50%;
      height: 100%;
    }
  }
}

.guide {
  &__image {
    width: 100%;
  }
}

.sure-enough {
  background-color: #173538;
  color: $tuf-color-white;

  &__right {
    padding-bottom: 0;
    align-items: flex-end;

    &__image {
      width: auto;

      max-height: rem(190);
    }
  }
}

.support {
  display: flex;

  flex-direction: column;

  @media screen and (min-width: rem(768)) {
    flex-direction: row;
  }

  &__working,
  &__benefits {
    position: relative;
    width: 100%;

    @media screen and (min-width: rem(768)) {
      width: 50%;
    }
  }
}

